# socketv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/dev_test/: CMakeLists.txt
example/tcp_client/: CMakeLists.txt
example/tcp_client/src/: main.cpp
example/tcp_server/: CMakeLists.txt
example/tcp_server/src/: main.cpp
example/udp_client/: CMakeLists.txt
example/udp_client/src/: main.cpp
example/udp_server/: CMakeLists.txt
example/udp_server/src/: main.cpp
include/: address.hpp  connection.hpp  listener.hpp  socketv.hpp
internal_include/: net_enum_map.hpp
src/: address.cpp  connection.cpp  connector.cpp  general.cpp  listener.cpp  sender.cpp  socketv.cpp
src/include/: defines.hpp  utils.hpp
src/unix/: address.cpp  general.cpp  listener.cpp  sender.cpp  socketv.cpp
src/unix/include/: utils.hpp
src/windows/: address.cpp  general.cpp  listener.cpp  sender.cpp  socketv.cpp
src/windows/include/: utils.hpp
